# dotfiles

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  anbox.nix  android-env.nix  aws.nix  bin.nix  blasebot.nix  bootstrap.sh  cargo-sync-readme.nix  celesters.nix  default.nix  deploy.sh  discord-base.nix  discord.nix  dolphin-base.nix  dolphin.nix  dotnet.nix  firefox.nix  flake.nix  flashplayer.nix  fuseenano.nix  gmusicproxy.nix  graalvm-ce-dev.nix  graalvm-ee.nix  hid-nintendo.nix  home.nix  hwdata.nix  jdk-mc.nix  jetbrains.nix  joycond.nix  julia-nixpkgs.nix  julia-oldpkgs.nix  julia-wrapped.nix  leobook.nix  linux-firmware-4.18.nix  (+32 more)
adoptopenjdk-bin/: generate-sources.py  jdk-linux-base.nix  jdk9-linux.nix  sources.json
bash/: .bashrc
cachix/: nixfmt.nix
components/: anbox.nix  annex-server.nix.back  apcupsd-server.nix  apcupsd.nix  blasebot.nix  cloud9.nix  component.nix  cross.nix  default.nix  docker.nix  efi.nix  en_us.nix  est.nix  extra.nix  fcitx5.nix  firefox.nix  flatpak.nix  fwupd.nix  glances.nix  gui.nix  hass.nix  home.nix  ibus.nix  kde.nix  kdeconnect.nix  kernel-bisect.nix  klipper.nix  kvm.nix  lxd.nix  macvm.nix  mailserver.nix  mastocrom.nix  mosh.nix  mqtt.nix  nixbuild.nix  postgres.nix  prometheus.nix  reposilite.nix  reverseproxy.nix  router.nix  (+11 more)
disks/: .diskrc
files/: ShellInABox.js  XCompose  ale-codefix-hack.diff  amdgpu-fancontrol  analog-output-speaker-split.conf  authorized_keys  fanctl.yml  (+40 more)
vfio-isolate/: default.nix  pyproject.toml  requirements.nix  requirements_frozen.txt
(+421 files in other folders)
