[tool.poetry]
name = "vfio-isolate"
version = "0.3.1"
description = "Commandline tool to facilitate CPU core isolation"
keywords = ["vfio", "cpu", "isolation"]
license = "MIT"
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: System Administrators", "Topic :: System :: Systems Administration", "Operating System :: POSIX :: Linux"]
homepage = "https://github.com/spheenik/vfio-isolate"
authors = ["Martin Schrodt (spheenik) <martin@schrodt.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
click = "7.1.2"
parsimonious = "0.8.1"
psutil = "5.7.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
